# UTF-8-to-UTF-16-conversion

./: CMakeLists.txt  README.md  example.cpp  test.txt
