project(example)
cmake_minimum_required(VERSION 3.0)

add_executable(example example.cpp)
install(TARGETS example RUNTIME DESTINATION bin)

if(UNIX)
    message(STATUS "this is unix")
     if(CMAKE_COMPILER_IS_GNUCXX)
         message(STATUS "this is GCC")
         add_definitions(-Wall)
         add_definitions(-Wextra)
         add_definitions(-pedantic)
     endif()
elseif(WINDOWS)
    if(MSVC)
        set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} /SUBSYSTEM:WINDOWS /W4")
    elseif(CMAKE_COMPILER_IS_GNUCXX)
        add_definitions(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mwindows")
    else()
        message(ERROR "(Not MSVC or GCC)")
    endif()
    message(STATUS "this is windows")
endif()